--- a/点击英雄 TL计算器/css/main-v004.css
+++ b/点击英雄 TL计算器/css/main-v004.css
@@ -15,7 +15,7 @@
 	overflow: hidden;
 }
 
-.boxes > div > div {
+.panel {
 	border-style: solid;
 	border-radius: 6px;
 	border-width: 1px;
@@ -62,7 +62,7 @@
 input {
 	border: none;
 	padding: 5px;
-	width: 48px;
+	width: 92px;
 	text-align: center;
 	font-size: 14px;
 }
@@ -102,10 +102,10 @@ input {
 	padding: 2px;
 }
 
-.numberInput > p {
+.numberInput > label {
 	display: inline-block;
 	margin: 0;
-	width: 100px;
+	width: 104px;
 }
 
 .numberInput > input {
@@ -149,4 +149,19 @@ td {
 
 //tr:nth-child(even) {
 	background-color: #f2f2f2;
+}
+
+.warning {
+    display: none;
+}
+
+.warning > div {
+    background-color: rgb(248, 215, 218);
+    color: rgb(114, 28, 36);
+    border-color: rgb(245, 198, 203);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 4px;
+    margin: 6px;
+    padding: 12px;
 }
